--- a/members.html
+++ b/members.html
@@ -33,12 +33,14 @@
       <h2>Core Members</h2>
       <ul>
         <li>Dr. Naomi Sakamoto (Japan)</li>
+        <li>Dr. Hung-Wen Lai (Taiwan)</li>
+        <li>Dr. Mok Chi Wei (Singapore)</li>
         <li>Dr. Zhao Jin (China)</li>
         <li>Dr. Hui Zhang (China)</li>
         <li>Dr. Qingmo Yang (China)</li>
         <li>Dr. Li Sheng-Lin (China)</li>
         <li>Dr. Zi-Hang Wang (China)</li>
-        <li>Dr. Hung-Wen Lai (Taiwan)</li>
+        <li>Dr. Qianfu Wu (China)</li>
       </ul>
     </div>
   </main>
