--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     });
   </script>
 </head>
+
 <body>
   <header>
     <div class="nav">
@@ -77,16 +78,19 @@
       </ul>
       <p style="margin-top:6px;color:#999">※ 詳細プロフィールは会員専用ページで公開予定です。</p>
     </div>
+
     <div class="card">
       <h2>Core Members</h2>
       <ul>
         <li>Dr. Naomi Sakamoto (Japan)</li>
         <li>Dr. Zhao Jin (China)</li>
+        <li>Dr. Hung-wen Lai (Taiwan)</li>
         <li>Dr. Hui Zhang (China)</li>
-        <li>Dr. Qingmo Yang (China)</li>
-        <li>Dr. Li Sheng-Lin (China)</li>
+        <li>Dr. Li-Sheng Lin (China)</li>
         <li>Dr. Zi-Hang Wang (China)</li>
-        <li>Dr. Hung-Wen Lai (Taiwan)</li>
+        <li>Dr. Qing-Mo Yang (China)</li>
+        <li>Dr. Fu-Wu Qian (China)</li>
+        <li>Dr. Mok Chi Wei (Singapore)</li>
       </ul>
     </div>
   </section>
